--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,9 @@
-<header class="flex justify-between items-center py-3 w-[1120px]">
-<img class="rounded-full w-12 h-12" src="../../public/pfp.png" alt="Fran photo">   
+<header class="flex justify-center items-center py-5 w-[1120px] mx-auto">  
 
 <nav class="flex flex-row gap-x-10 opacity-50">
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/projects">Projects</a>    
-    <a href="/contact">Contact</a>
+    <a href="#top">Inicio</a>
+    <a href="/about">Sobre mí</a>
+    <a href="#experiencia">Experiencia</a>
+    <a href="#projectos">Proyectos</a>    
+    <a href="#contacto">Contacto</a>
 </header>
