--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,10 +49,10 @@ import Briefcase from "../components/icons/Briefcase.astro";
           <GithubIcon class="size-6" />
           Github
         </Socials>
-        <Socials href="fjinfantejob@gmail.com">
+        <Socials href="mailto:fjinfantejob@gmail.com">
           <MailIcon class="size-6" />
           fjinfantejob@gmail.com
-        </Socials>
+      </Socials>
       </nav>
     </SectionContainer>
 
