--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -1,5 +1,4 @@
 ---
-import LinkInline from "./LinkInline.astro"
 
 interface Props {
   title: string
@@ -13,44 +12,21 @@ const { title, company, description, link, date } = Astro.props
 ---
 
 <div
-  class="relative mx-12 pb-12 grid before:absolute before:left-[-35px] before:block before:h-full before:border-l-2 before:border-black/20 dark:before:border-white/15 before:content-[''] md:grid-cols-5 md:gap-10 md:space-x-4]"
+  class="relative  mx-12 pb-12 grid before:absolute before:left-[-35px] before:block before:h-full before:border-l-2 before:border-white/75 before:content-[''] md:grid-cols-5 md:gap-10 md:space-x-4"
 >
   <div class="relative pb-12 md:col-span-2">
     <div class="sticky top-0">
-      <span class="text-blue-400 -left-[42px] absolute rounded-full text-5xl"
+      <span class="text-blue-300 -left-[42px] absolute rounded-full text-5xl"
         >&bull;</span
       >
 
-      <h3 class="text-xl font-bold text-blue-400">{title}</h3>
-      <h4 class="font-semibold text-xl text-white dark:text-white">{company}</h4>
-      <time class="p-0 m-0 text-sm text-white dark:text-white/80 opacity-75">{date}</time>
+      <h3 class="text-xl font-bold text-blue-300">{title}</h3>
+      <h4 class="font-semibold text-xl text-white-600 dark:text-white">{company}</h4>
+      <time class="p-0 m-0 text-sm text-white-600/80 dark:text-white/80">{date}</time>
     </div>
   </div>
-  <div class="relative flex flex-col gap-2 pb-4 text-white-600 opacity-5 dark:text-gray-300 md:col-span-3">
+  <div class="relative flex flex-col gap-2 pb-4 text-white-600 dark:text-white-300 md:col-span-3">
     {description}
-    {
-      link && (
-        <LinkInline href={link}>
-          Saber más{" "}
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="w-5 icon icon-tabler icon-tabler-chevron-right"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            stroke-width="2"
-            stroke="currentColor"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <>
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M9 6l6 6l-6 6" />
-            </>
-          </svg>
-        </LinkInline>
-      )
-    }
+   
   </div>
 </div>
