--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,20 +8,24 @@ import MailIcon from "../components/icons/MailIcon.astro";
 import Experience from "../components/Experience.astro";
 import SectionContainer from "../components/SectionContainer.astro";
 import Briefcase from "../components/icons/Briefcase.astro";
+import CodeIcon from "../components/icons/CodeIcon.astro";
+import Projects from "../components/Projects.astro";
 ---
 
 <Layout
   title="Porfolio de Fran Infante - Desarrollador Web Full-Stack"
   description="Considera contratar a Fran para proyectos reales y profesionales"
 >
-  <main>
+  <main class="px-2">
     <SectionContainer class="py-44 pb-24">
       <img
         class="rounded-full size-[200px]"
         src="../../public/pfp.png"
         alt="Fran photo"
       />
-      <h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-10">
+      <h1
+        class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
+      >
         Buenas, soy Fran
         <a
           href="https://www.linkedin.com/in/franinfante/"
@@ -32,7 +36,7 @@ import Briefcase from "../components/icons/Briefcase.astro";
           <Badge>Disponible para trabajar</Badge>
         </a>
       </h1>
-      <h2 class="text-2xl text-wrap">
+      <h2 class="text-2xl text-wrap max-w-[700px]">
         <span>Desarrollador Web Full-Stack</span>. <span
           class="text-yellow-200/90">De Sevilla, España</span
         >. <span class="opacity-75 font-semibold"
@@ -40,29 +44,36 @@ import Briefcase from "../components/icons/Briefcase.astro";
         >.
       </h2>
 
-      <nav class="flex gap-x-2 mt-6">
+      <nav class="flex gap-x-4 mt-6 flex-wrap">
         <Socials href="https://www.linkedin.com/in/franinfante/">
-          <LinkedInIcon class="size-6" />
+          <LinkedInIcon class="size-4" />
           LinkedIn
         </Socials>
         <Socials href="https://github.com/FranInfante">
-          <GithubIcon class="size-6" />
+          <GithubIcon class="size-4" />
           Github
         </Socials>
         <Socials href="mailto:fjinfantejob@gmail.com">
-          <MailIcon class="size-6" />
+          <MailIcon class="size-4" />
           fjinfantejob@gmail.com
-      </Socials>
+        </Socials>
       </nav>
     </SectionContainer>
 
     <SectionContainer id="experiencia" class="mt-10">
       <h2 class="text-2xl ml-8 font-semibold mb-6 flex gap-x-3 items-center">
-        <Briefcase class="size-8"/>
+        <Briefcase class="size-8" />
         Experiencia laboral
-
       </h2>
       <Experience />
+    </SectionContainer>
+
+    <SectionContainer id="experiencia" class="mt-10">
+      <h2 class="text-2xl ml-8 font-semibold mb-6 flex gap-x-3 items-center">
+        <CodeIcon class="size-8" />
+        Proyectos
+      </h2>
+      <Projects />
     </SectionContainer>
   </main>
 </Layout>
