--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -10,7 +10,7 @@ const EXPERIENCE = [
       "Moregains es una app para el seguimiento de gimnasio que usa algoritmos avanzados para mejorar el rendimiento físico. Ofrece recomendaciones personalizadas de entrenamiento y nutrición basadas en los datos del usuario.",
   },
   {
-    date: "Mar 2024 - Jun 2024 · 4 mos",
+    date: "Mar 2024 - Jun 2024 · 4 meses",
     title: "Programador Full Stack (Prácticas)",
     company: "Profile Software Services",
     location: "Seville, Andalusia, Spain · Remote",
