--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const currentYear = new Date().getFullYear()
   <div
     class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-4"
   >
-    <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
+    <span class="text-sm sm:text-center text-white-800/70 dark:text-white-200/70"
       >© {currentYear}
       <a href="https://www.linkedin.com/in/franinfante/" target="_blank" class="hover:underline">Francisco José Infante Cano</a>. Todos los derechos reservados
     </span>
@@ -19,7 +19,7 @@ const currentYear = new Date().getFullYear()
         <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
       </li>
       <li>
-        <a id="contacto" href="mailto:miduga@gmail.com" class="hover:underline"
+        <a id="contacto" href="mailto:fjinfantejob@gmail.com" class="hover:underline"
           >Contacto</a
         >
       </li>
