--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,6 +4,6 @@
     <a href="#top">Inicio</a>
     <a href="/about">Sobre mí</a>
     <a href="#experiencia">Experiencia</a>
-    <a href="#projectos">Proyectos</a>    
+    <a href="#proyectos">Proyectos</a>    
     <a href="#contacto">Contacto</a>
 </header>
