--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Projects from "../components/Projects.astro";
     <SectionContainer class="py-44 pb-24">
       <img
         class="rounded-full size-[200px]"
-        src="../../public/pfp.png"
+        src="/pfp.png"
         alt="Fran photo"
       />
       <h1
@@ -68,7 +68,7 @@ import Projects from "../components/Projects.astro";
       <Experience />
     </SectionContainer>
 
-    <SectionContainer id="experiencia" class="mt-10">
+    <SectionContainer id="proyectos" class="mt-10">
       <h2 class="text-2xl ml-8 font-semibold mb-6 flex gap-x-3 items-center">
         <CodeIcon class="size-8" />
         Proyectos
