--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -78,10 +78,10 @@ const PROJECTS = [
     ],
   },
   {
-    title: "FranOnWheels",
+    title: "ProfileRooms",
     description:
-      "Primer projecto adaptándome a nuevas tecnologías y lenguajes, aplicación destinada a la gestión automatizada de una autoescuela, tratando con usuarios, reserva de clases, vehículos y facilidad en control de datos sin necesidad de entrar al código",
-    github: "https://github.com/FranInfante/FranOnWheelsApp",
+      "Proyecto que llevamos a delante en el equipo de Profile Software Services para permitir a personas ajenas a la empresa reservar salas disponibles, aquí aprendí a gestionar control de versiones dentro de un equipo profesional, afianzando lo ya aprendido y leyendo documentación con aspectos desconocidos de la programación",
+    github: "https://github.com/FranInfante/ProfileRooms",
     image: "/projects/Rooms.webp",
     tags: [
       TAGS.SpringbootIcon,
