--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { description, title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<div class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"></div>
+		<div class="absolute inset-0 -z-10 min-h-screen w-full items-center px-5 py-24"></div>
 		<Header />
 		<slot />
 		<Footer />
@@ -30,27 +30,27 @@ const { description, title } = Astro.props;
 </html>
 <style is:global>
 	:root {
-		color-scheme: light dark;
+	  color-scheme: light dark;
 	}
+  
 	html {
-		font-family: 'Onest', system-ui, sans-serif;
-		scroll-behavior: smooth;
+	  font-family: 'Onest', system-ui, sans-serif;
+	  scroll-behavior: smooth;
 	}
-	body{
-	
-		background: #050505;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		min-height: 100vh;
-		
+  
+	body {
+	  background: radial-gradient(125% 125% at 50% 10%, #000 40%, #63e 100%);
+	  display: flex;
+	  flex-direction: column;
+	  justify-content: center;
+	  min-height: 100vh;
+	  margin: 0;
+	  padding: 0;
 	}
-@media (prefers-reduced-motion:reduce){
-html{
-
-	scroll-behavior: auto;
-
-}
-
-}
+  
+	@media (prefers-reduced-motion: reduce) {
+	  html {
+		scroll-behavior: auto;
+	  }
+	}
 </style>
