--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,11 @@ const { description, title } = Astro.props;
 	}
   
 	body {
-	  background: radial-gradient(125% 125% at 50% 10%, #000 40%, #63e 100%);
+		background: radial-gradient(circle at 23% 15%, 
+		#000000 0%,
+		#4b0082 50%,
+		#00008b 100% 
+	  );
 	  display: flex;
 	  flex-direction: column;
 	  justify-content: center;
