--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ import About from "../components/About.astro";
       </nav>
     </SectionContainer>
 
-    <SectionContainer id="experiencia" class="mt-10">
+    <SectionContainer id="experiencia" class="py-10">
       <h2 class="text-2xl ml-8 font-semibold mb-6 flex gap-x-3 items-center">
         <Briefcase class="size-8" />
         Experiencia laboral
@@ -70,7 +70,7 @@ import About from "../components/About.astro";
       <Experience />
     </SectionContainer>
 
-    <SectionContainer id="proyectos" class="mt-10">
+    <SectionContainer id="proyectos" class="py-10">
       <h2 class="text-2xl ml-8 font-semibold mb-6 flex gap-x-3 items-center">
         <CodeIcon class="size-8" />
         Proyectos
@@ -78,7 +78,7 @@ import About from "../components/About.astro";
       <Projects />
     </SectionContainer>
 
-    <SectionContainer id="proyectos" class="mt-10">
+    <SectionContainer id="aboutme" class="py-10">
       <h2 class="text-2xl ml-8 font-semibold mb-6 flex gap-x-3 items-center">
         <ProfileIcon class="size-8" />
         Sobre mí
