--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,16 +1,17 @@
-<div class="p-4 sm:p-8 md:p-12 lg:p-16 w-full flex flex-col md:flex-row items-center">
-  <div class="w-full md:w-1/2 lg:w-2/3">
+<div class="lg:p-16 w-full flex flex-col md:flex-row items-center">
+  <div class="w-full md:w-1/2 lg:w-2/3 py-8">
     <h1 class="text-white font-bold text-3xl mt-6 mb-8">
       Sobre Mí
     </h1>
 
-    <p class="text-white mb-10 leading-relaxed">
+    <p class="text-white mb-10 leading-8">
       Hola, soy Fran Infante, un joven <span class="font-semibold text-cyan-300">Programador Web Junior</span> recién graduado en <span class="font-semibold text-indigo-300">Diseño de Aplicaciones Web (DAW)</span>.
-      <br />
+      
       Actualmente, estoy <span class="font-semibold text-yellow-300">desarrollando mis propias aplicaciones</span> para seguir formándome mientras busco una oportunidad en el sector como <span class="font-semibold text-lime-300">desarrollador Frontend o Backend</span>.
-      <br />
+    </p>
+    <p class="leading-8">
       Estoy emocionado por <span class="font-semibold text-pink-300">demostrar mis habilidades</span> y ver cómo el tiempo y el esfuerzo que he invertido <span class="font-semibold text-purple-300">dan sus frutos</span>.
-      <br />
+      
       Cuento con un <span class="font-semibold text-green-300">nivel nativo de inglés</span> y resido en <span class="font-semibold text-orange-300">Sevilla, España</span>. Soy una persona activa, sociable y con mucha energía.
     </p>
   </div>
