--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -103,7 +103,7 @@ const PROJECTS = [
     PROJECTS.map(({ image, title, description, tags, github }) => (
       <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
         <div class="w-full md:w-1/2">
-          <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:shadow-2xl">
+          <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform overflow-clip rounded-xl sm:rounded-xl">
             <img
               alt="FranOnWheels Screenshot"
               class="object-cover object-top w-full h-auto transition duration-500 sm:h-full md:scale-110 hover:scale-105"
