--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,7 +79,7 @@ import About from "../components/About.astro";
     </SectionContainer>
 
     <SectionContainer id="aboutme" class="py-10">
-      <h2 class="text-2xl ml-8 font-semibold mb-6 flex gap-x-3 items-center">
+      <h2 class="text-2xl font-semibold justify-center flex gap-x-3 items-center">
         <ProfileIcon class="size-8" />
         Sobre mí
       </h2>
