--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,4 +1,4 @@
-<div class="lg:p-16 w-full flex flex-col md:flex-row items-center">
+<div class=" w-full flex flex-col md:flex-row items-center">
   <div class="w-full md:w-1/2 lg:w-2/3 py-8">
     <h1 class="text-white font-bold text-3xl mt-6 mb-8">
       Sobre Mí
