--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,21 +2,21 @@
   class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2"
 >
   <nav
-    class="flex px-3 text-sm font-medium rounded-full text-gray-400 dark:text-gray-200 justify-center items-center"
+    class="flex px-3 text-sm font-medium rounded-full text-white-400 opacity-85 dark:text-gray-200 justify-center items-center"
   >
     <a
       href="#experiencia"
-      class="nav-link relative block px-2 py-2 transition hover:text-cyan-200 dark:hover:text-green-400"
+      class="nav-link relative block px-2 py-2 transition hover:text-cyan-200 dark:hover:text-green-300"
       aria-label="experiencia">Experiencia</a
     >
     <a
       href="#proyectos"
-      class="nav-link relative block px-2 py-2 transition hover:text-cyan-200 dark:hover:text-green-400"
+      class="nav-link relative block px-2 py-2 transition hover:text-cyan-200 dark:hover:text-green-300"
       aria-label="proyectos">Proyectos</a
     >
     <a
       href="#aboutme"
-      class="nav-link relative block px-2 py-2 transition hover:text-cyan-200 dark:hover:text-green-400"
+      class="nav-link relative block px-2 py-2 transition hover:text-cyan-200 dark:hover:text-green-300"
       aria-label="aboutme">Sobre mí</a
     >
     <a
