--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,12 +15,10 @@ const currentYear = new Date().getFullYear()
     <ul
       class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
     >
+      
       <li>
-        <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
-      </li>
-      <li>
-        <a id="contacto" href="mailto:fjinfantejob@gmail.com" target="_blank" class="hover:underline"
-          >Contacto</a
+        <a id="contacto" href="" target="_blank" class="hover:underline"
+          >Descargar Currículum</a
         >
       </li>
     </ul>
