--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -62,7 +62,7 @@ const PROJECTS = [
   {
     title: "FranOnWheels",
     description:
-      "Primer projecto adaptándome a nuevas tecnologías y lenguajes, aplicación destinada a la gestión automatizada de una autoescuela, tratando con usuarios, reserva de clases, vehículos y facilidad en control de datos sin necesidad de entrar al código",
+      "Primer proyecto adaptándome a nuevas tecnologías y lenguajes, aplicación destinada a la gestión automatizada de una autoescuela, tratando con usuarios, reserva de clases, vehículos y facilidad en control de datos sin necesidad de entrar al código",
     github: "https://github.com/FranInfante/FranOnWheelsApp",
     image: "/projects/FranOnWheels.webp",
     tags: [
