--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,27 +2,27 @@
   class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2"
 >
   <nav
-    class="flex px-3 text-sm font-medium rounded-full text-white-400 opacity-85 dark:text-gray-200 justify-center items-center"
+    class="flex px-3 text-sm font-medium rounded-full text-white-400 dark:text-gray-200 justify-center items-center"
   >
     <a
       href="#experiencia"
-      class="nav-link relative block px-2 py-2 transition hover:text-cyan-200 dark:hover:text-green-300"
+      class="nav-link relative block px-2 py-2 transition hover:text-cyan-500"
       aria-label="experiencia">Experiencia</a
     >
     <a
       href="#proyectos"
-      class="nav-link relative block px-2 py-2 transition hover:text-cyan-200 dark:hover:text-green-300"
+      class="nav-link relative block px-2 py-2 transition hover:text-cyan-500"
       aria-label="proyectos">Proyectos</a
     >
     <a
       href="#aboutme"
-      class="nav-link relative block px-2 py-2 transition hover:text-cyan-200 dark:hover:text-green-300"
+      class="nav-link relative block px-2 py-2 transition hover:text-cyan-500"
       aria-label="aboutme">Sobre mí</a
     >
     <a
       href="mailto:danielgrjob@gmail.com"
       target="_blank"
-      class="nav-link relative block px-2 py-2 transition hover:text-cyan-200 dark:hover:text-green-400"
+      class="nav-link font-extrabold relative block px-2 py-2 transition hover:text-red-700"
       aria-label="contacto">Contacto</a
     >
   </nav>
@@ -41,9 +41,9 @@
             navItems.forEach((item) => {
   
               if (item.getAttribute("aria-label") === entry.target.id) {
-                item.classList.add("text-green-300");
+                item.classList.add("text-green-500");
               } else {
-                item.classList.remove("text-green-300");
+                item.classList.remove("text-green-500");
               }
             });
           }
@@ -83,7 +83,7 @@
 
   @keyframes nav-shadown {
     to {
-      @apply shadow-lg ring-1 backdrop-blur dark:bg-gray-800/90 bg-white/50 ring-white/10;
+      @apply shadow-lg ring-1 backdrop-blur bg-black/50 ring-white/10;
     }
   }
 </style>
