--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@ const currentYear = new Date().getFullYear()
     >
       
       <li>
-        <a id="contacto" href="" target="_blank" class="hover:underline"
+        <a id="contacto" href="CV Francisco Jose Infante Cano.pdf" target="_blank" class="hover:underline"
           >Descargar Currículum</a
         >
       </li>
