--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@
       aria-label="aboutme">Sobre mí</a
     >
     <a
-      href="mailto:danielgrjob@gmail.com"
+      href="mailto:fjinfantejob@gmail.com"
       target="_blank"
       class="nav-link font-extrabold relative block px-2 py-2 transition hover:text-red-700"
       aria-label="contacto">Contacto</a
