--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ const { description, title } = Astro.props;
 </html>
 <style is:global>
 	:root {
-	  color-scheme: light dark;
+	  color-scheme: dark;
 	}
   
 	html {
