--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,18 +26,19 @@ import About from "../components/About.astro";
         alt="Fran photo"
       />
       <h1
-        class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
-      >
-        Buenas, soy Fran
-        <a
-          href="https://www.linkedin.com/in/franinfante/"
-          target="_blank"
-          class="justify-center"
-          rel="noopener"
-        >
-          <Badge>Disponible para trabajar</Badge>
-        </a>
-      </h1>
+  class="text-white text-3xl md:text-4xl lg:text-5xl font-bold pb-3 flex flex-col lg:flex-row lg:items-center lg:gap-x-4"
+>
+  Buenas, soy Fran
+  <a
+    href="https://www.linkedin.com/in/franinfante/"
+    target="_blank"
+    class="lg:ml-4 justify-center"
+    rel="noopener"
+  >
+    <Badge>Disponible para trabajar</Badge>
+  </a>
+</h1>
+      
       <h2 class="text-2xl text-wrap max-w-[700px]">
         <span>Desarrollador Web Full-Stack</span>. <span
           class="text-yellow-200/90">De Sevilla, España</span
