--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,9 +3,16 @@ import ExperienceItem from "./ExperienceItem.astro"
 
 const EXPERIENCE = [
   {
-    date: "Actualmente",
+    date: "Oct 2024 - Actualmente",
+    title: "Petinder",
+    company: "Proyecto Voluntario",
+    description:
+      "Petinder es una plataforma cuya prioridad número uno es dar visibilidad a las protectoras de animales para poder incrementar las adopciones, educar a los usuarios sobre adopción responsable y reducir el abandono proporcionando a los usuarios con una gran variedad de actividades, sitios que visitar, experiencias de viajes y mucho mas para mostrar diferentes opciones que uno puede hacer junto a su mejor amigo.",
+  },
+  {
+    date: "En desarrollo",
     title: "Moregains",
-    company: "Proyecto Actual",
+    company: "Proyecto Personal",
     description:
       "Moregains es una app para el seguimiento de gimnasio que usa algoritmos avanzados para mejorar el rendimiento físico. Ofrece recomendaciones personalizadas de entrenamiento y nutrición basadas en los datos del usuario.",
   },
