updated projects experience

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,11 +3,18 @@ import ExperienceItem from "./ExperienceItem.astro"
 
 const EXPERIENCE = [
   {
-    date: "Oct 2024 - Actualmente",
+    date: "Sep 2024 - Nov 2024",
     title: "Petinder",
     company: "Proyecto Voluntario",
     description:
       "Petinder es una plataforma cuya prioridad número uno es dar visibilidad a las protectoras de animales para poder incrementar las adopciones, educar a los usuarios sobre adopción responsable y reducir el abandono proporcionando a los usuarios con una gran variedad de actividades, sitios que visitar, experiencias de viajes y mucho mas para mostrar diferentes opciones que uno puede hacer junto a su mejor amigo.",
+  },
+  {
+    date: "Sep 2024 - Nov 2024",
+    title: "Stars League Fantasy",
+    company: "Proyecto Voluntario",
+    description:
+      "Stars League Fantasy es una aplicación de fantasía diseñada para entusiastas del fútbol, en la que los usuarios crean y gestionan equipos virtuales basados en jugadores reales. La aplicación premia a los equipos en función de los resultados y el rendimiento de los jugadores en jornadas reales, proporcionando una experiencia interactiva y emocionante que combina estrategia y conocimientos deportivos.",
   },
   {
     date: "En desarrollo",
