--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,7 +1,29 @@
 ---
-import ExperienceItem from "./ExperienceItem.astro"
+import ExperienceItem from "./ExperienceItem.astro";
 
 const EXPERIENCE = [
+  {
+    date: "Ene 2025 - Presente",
+    title: "Programador Front-End\nTutor Alumnos DAW",
+    company: "CodeArts Solutions",
+    description:
+      "Puesto de programador Front-End en los proyectos de CodeArts Solutions, donde también hago seguimiento y tutorización de proyectos de alumnos en prácticas.",
+  },
+  {
+    date: "Oct 2024 - Presente",
+    title: "KeepItUp",
+    company: "Proyecto Personal",
+    description:
+      "KeepItUp es una app para el seguimiento de gimnasio que usa algoritmos avanzados para mejorar el rendimiento físico. Permite registrar tus entrenamientos y ver el progreso a lo largo del tiempo, esto junto a un registro de pesajes.",
+    link: "https://keepitupapp.com",
+  },
+  {
+    date: "Nov 2024 - Ene 2025",
+    title: "BoxFirma",
+    company: "Diseloo Technologies",
+    description:
+      "Producto de gestion y emisión de Certificados digitales para clientes gestores y administradores de fincas.",
+  },
   {
     date: "Sep 2024 - Nov 2024",
     title: "Petinder",
@@ -16,13 +38,7 @@ const EXPERIENCE = [
     description:
       "Stars League Fantasy es una aplicación de fantasía diseñada para entusiastas del fútbol, en la que los usuarios crean y gestionan equipos virtuales basados en jugadores reales. La aplicación premia a los equipos en función de los resultados y el rendimiento de los jugadores en jornadas reales, proporcionando una experiencia interactiva y emocionante que combina estrategia y conocimientos deportivos.",
   },
-  {
-    date: "En desarrollo",
-    title: "Moregains",
-    company: "Proyecto Personal",
-    description:
-      "Moregains es una app para el seguimiento de gimnasio que usa algoritmos avanzados para mejorar el rendimiento físico. Ofrece recomendaciones personalizadas de entrenamiento y nutrición basadas en los datos del usuario.",
-  },
+
   {
     date: "Mar 2024 - Jun 2024 · 4 meses",
     title: "Programador Full Stack (Prácticas)",
@@ -30,8 +46,8 @@ const EXPERIENCE = [
     location: "Seville, Andalusia, Spain · Remote",
     description:
       "Participé en dos proyectos: Grupal: Aplicación para reservas de salas en la empresa. Individual (TFG): Página para una autoescuela con gestión de alumnos, clases, vehículos y profesores.",
-  }
-]
+  },
+];
 ---
 
 <ol class="relative">
