--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -1,18 +1,17 @@
 ---
-
 interface Props {
-  title: string
-  company: string
-  description: string
-  link?: string
-  date: string
+  title: string;
+  company: string;
+  description: string;
+  link?: string;
+  date: string;
 }
 
-const { title, company, description, link, date } = Astro.props
+const { title, company, description, link, date } = Astro.props;
 ---
 
 <div
-  class="relative  mx-12 pb-12 grid before:absolute before:left-[-34px] before:block before:h-full before:border-l-2 before:border-white/75 before:content-[''] md:grid-cols-5 md:gap-10 md:space-x-4"
+  class="relative mx-12 pb-12 grid before:absolute before:left-[-34px] before:block before:h-full before:border-l-2 before:border-white/75 before:content-[''] md:grid-cols-5 md:gap-10 md:space-x-4"
 >
   <div class="relative pb-12 md:col-span-2">
     <div class="sticky top-0">
@@ -20,13 +19,25 @@ const { title, company, description, link, date } = Astro.props
         >&bull;</span
       >
 
-      <h3 class="text-xl font-bold text-blue-300">{title}</h3>
-      <h4 class="font-semibold text-xl text-white-600 dark:text-white">{company}</h4>
-      <time class="p-0 m-0 text-sm text-white-600/80 dark:text-white/80">{date}</time>
+      <h3 class="text-xl font-bold text-blue-300 whitespace-pre-line">{title}</h3>
+      <h4 class="font-semibold text-xl text-white-600 dark:text-white">
+        {company}
+      </h4>
+      <time class="p-0 m-0 text-sm text-white-600/80 dark:text-white/80"
+        >{date}</time
+      >
     </div>
   </div>
-  <div class="relative flex flex-col gap-2 pb-4 text-white-600 dark:text-white-300 md:col-span-3">
+  <div
+    class="relative flex flex-col gap-2 pb-4 text-white-600 dark:text-white-300 md:col-span-3"
+  >
     {description}
-   
+    {
+      link && (
+        <a href={link} target="_blank" class="text-blue-500 underline">
+          {link}
+        </a>
+      )
+    }
   </div>
 </div>
