--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -96,6 +96,18 @@ const TAGS = {
 };
 const PROJECTS = [
   {
+    title: "KeepItUp",
+    description:
+      "KeepItUpApp está orientada a fomentar la competitividad y el compromiso, permitiendo a los usuarios registrar su peso y entrenamientos, ser gestionados por entrenadores y visualizar resultados de forma sencilla.",
+    image: "/projects/KeepItUp.webp",
+    tags: [
+      TAGS.Angular,
+      TAGS.TypeScript,
+      TAGS.TailwindIcon,
+      TAGS.SpringbootIcon
+    ],
+
+  },{
     title: "Petinder",
     description:
       "Plataforma dedicada principalmente a dar visibilidad a las protectoras de animales con el objetivo de aumentar las adopciones, educar a los usuarios sobre la adopción responsable y reducir el abandono. Además, ofrece una amplia variedad de actividades, lugares para visitar y experiencias de viaje, brindando a los usuarios diversas opciones para disfrutar con sus mascotas.",
