--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -6,7 +6,7 @@
       Hola, soy Fran Infante, un joven <span class="font-semibold text-cyan-300"
         >Programador Web Junior</span
       > graduado en <span class="font-semibold text-indigo-300"
-        >Diseño de Aplicaciones Web (DAW)</span
+        >Desarrollo de Aplicaciones Web (DAW)</span
       >. Actualmente, estoy <span class="font-semibold text-yellow-300"
         >desarrollando mis propias aplicaciones</span
       > para seguir formándome mientras trabajo como <span
