--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ import About from "../components/About.astro";
         <span>Desarrollador Web Full-Stack</span>. <span
           class="text-yellow-200/90">De Sevilla, España</span
         >. <span class="opacity-75 font-semibold"
-          >Graduado en Diseño de Aplicaciones Web</span
+          >Graduado en Desarrollo de Aplicaciones Web</span
         >.
       </h2>
 
